objects/JIRA_Issue_Key__c.object
<CustomObject>
    <fields>
        <fullName>Is_Search_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Search Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Event_Type_Name__c</fullName>
        <label>Issue Event Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Search_Response__c</fullName>
        <label>Jira Search Response</label>
        <length>102400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jira_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jira User Account</label>
        <referenceTo>Jira_User_Account__c</referenceTo>
        <relationshipLabel>JIRA Issue Keys</relationshipLabel>
        <relationshipName>JIRA_Issue_Keys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Name__c</fullName>
        <externalId>true</externalId>
        <label>Key Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Label_Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Label Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Recipients__c</fullName>
        <label>Notification Recipients</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>102400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Url__c</fullName>
        <label>Request Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence #</label>
        <type>AutoNumber</type>
    </fields>
    <label>JIRA Issue Key</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Key_Name__c</columns>
        <columns>Issue_Event_Type_Name__c</columns>
        <columns>Is_Search_Processed__c</columns>
        <columns>No_Label_Notification_Sent__c</columns>
        <columns>Jira_User_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>J-{000000}</displayFormat>
        <label>JIRA Issue Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIRA Issue Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>